--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -10,26 +10,26 @@
   text-rendering: optimizeLegibility;
   text-decoration: none;
   list-style-type: none;
-  @include prefix(font-smoothing,antialiased);
+  @include prefix(font-smoothing, antialiased);
 }
-html,body{
+html,
+body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   scroll-behavior: smooth;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   // 1rem = 16px 10/16 = 0.625*100 = 62.5
-  // 1rem = 10px = 62.5%
-  overflow-x: hidden;
-  font-size: 62.5%; 
+  // 1rem = 10px = 62.5% 
+  font-size: 62.5%;
   font-family: $font-primary;
 }
 // all: unset; remove all css inbuild style
 a {
-    background-color: transparent;
-    color: $gray-900; 
+  background-color: transparent;
+  color: $gray-900;
 }
-div{
+div {
   @include font-size($p-font-sizes);
 }
 main {
