--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,7 @@
 @import './abstracts/variables';
 @import './abstracts/mixins';
 @import './base/reset';
+@import './base/common';
 @import './abstracts/functions';
 @import './components/navbar';
+@import './layout/home';
