--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,3 +5,5 @@
 @import './abstracts/functions';
 @import './components/navbar';
 @import './layout/home';
+@import './layout/features';
+@import './layout/why-item';
