--- a/sass/layout/_why-item.scss
+++ b/sass/layout/_why-item.scss
@@ -1,6 +1,19 @@
 .why-item {
   grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
+  grid-column-gap: 10rem;
+  align-items: center;
+}
+.why-heading {
+  font-weight: 500;
+  padding-bottom: 2rem;
+}
+.why-paragraph {
+  font-weight: 400;
+  color: $text-light;
 }
 .why-image {
   width: 100%;
+}
+.item-1 {
+  background: $bg-light;
 }
