update is done px project

--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,9 @@ header {
   font-weight: 400;
   color: #97a4be; }
 
+.btn-primray {
+  background: #00fff1; }
+
 .why-image {
   width: 100%; }
 
