--- a/sass/layout/_why-item.scss
+++ b/sass/layout/_why-item.scss
@@ -13,10 +13,16 @@
 }
 .btn-primray {
   background: $primary;
+  @include p(0.5rem 1.5rem);
+  display: inline-block;
+  font-weight: bold;
 }
 .why-image {
   width: 100%;
 }
 .item-1 {
   background: $bg-light;
+}
+.text-right {
+  text-align: right;
 }
