download section is done

--- a/css/style.css
+++ b/css/style.css
@@ -408,6 +408,10 @@ header {
 
 .app-place-bottom {
   transform: translateY(8rem); }
+  @media (max-width: 768px) {
+    .app-place-bottom {
+      width: 25rem;
+      transform: translateY(0); } }
 
 .everything {
   padding: 4rem 0;
@@ -451,3 +455,69 @@ header {
   .watch .watch-heading {
     margin: 3rem 0;
     font-weight: 500; }
+
+.download-container {
+  height: 80vh;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
+  background: url("../../images/map.png") no-repeat center center; }
+
+.btn-glow {
+  border-radius: 0;
+  position: relative; }
+  .btn-glow::before {
+    content: '';
+    position: absolute;
+    width: 90%;
+    bottom: -1rem;
+    height: 2rem;
+    background: rgba(0, 255, 241, 0.3);
+    filter: blur(1rem); }
+
+.aim {
+  background: #212529;
+  padding: 4rem 0; }
+  .aim blockquote {
+    color: #00fff1;
+    text-align: center;
+    width: 50%;
+    margin: 0 auto; }
+
+.grid-2 {
+  grid-template-columns: repeat(2, 1fr); }
+  @media (max-width: 768px) {
+    .grid-2 {
+      grid-template-columns: repeat(1, 1fr); } }
+
+.app-download-images {
+  width: 30rem;
+  height: 40rem; }
+
+.download-start {
+  padding: 4rem 0;
+  background: #f5f6fa; }
+
+.download-grid {
+  place-items: center; }
+
+.grid-heading {
+  margin: 2rem 0; }
+
+.appdownload-content .grid-heading {
+  color: #233148;
+  font-weight: 500; }
+
+.appdownload-content .paragrahp {
+  padding: 0 0 2rem 0;
+  color: #97a4be; }
+
+.appdownload-content .devices {
+  width: 10rem;
+  margin-right: 1rem; }
+
+.get {
+  left: 50%;
+  bottom: -5rem;
+  transform: translateX(-50%); }
