--- a/css/style.css
+++ b/css/style.css
@@ -521,3 +521,38 @@ header {
   left: 50%;
   bottom: -5rem;
   transform: translateX(-50%); }
+
+.footer-top {
+  padding: 5rem 0; }
+  .footer-top .footer-item-heading {
+    padding: 2rem 0; }
+
+.text-center {
+  text-align: center; }
+
+.footer-items {
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr)); }
+
+.footer-grid {
+  gap: 2rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
+.footer-bttom {
+  margin-top: 3rem;
+  padding: 2rem 0;
+  background: #212529;
+  color: #fff; }
+
+.footer-left h4 {
+  color: #00fff1; }
+
+.footer-right i {
+  margin: 0 1rem;
+  color: #fff; }
+
+.input-container input {
+  padding: 0.3rem 0.4rem;
+  outline: none;
+  width: 40rem; }
